[gd_scene load_steps=7 format=3 uid="uid://cvox0ji1ifnyf"]

[ext_resource type="Script" path="res://chunks/base_chunk.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://ci7v07sdxmrnf" path="res://Tile set/Palace TileMap 1.png" id="2_r3xd2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4kvac"]
texture = ExtResource("2_r3xd2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 16, -12, 16, 16, -12, 16)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 12, -16, 12, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -16, 16, -16, 16, 16, -12, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -12, 16, -12, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -12, 16, -12, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -12, 12, -12, 12, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 12, -16, 12, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 12, -16, 12, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -16, 16, -16, 16, 16, -12, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -16, 16, -16, 16, 16, -12, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_y6js2"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_4kvac")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xaf8u"]
size = Vector2(80.2, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0cqg"]
size = Vector2(79.9, 20)

[node name="BaseChunk" type="Node2D"]
script = ExtResource("1_script")

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource("TileSet_y6js2")
format = 2

[node name="ConnectionPoints" type="Node2D" parent="."]

[node name="left" type="Marker2D" parent="ConnectionPoints"]
position = Vector2(0, 540)
gizmo_extents = 50.0

[node name="right" type="Marker2D" parent="ConnectionPoints"]
position = Vector2(1920, 540)
gizmo_extents = 50.0

[node name="top" type="Marker2D" parent="ConnectionPoints"]
position = Vector2(960, 0)
gizmo_extents = 50.0

[node name="bottom" type="Marker2D" parent="ConnectionPoints"]
position = Vector2(960, 1080)
gizmo_extents = 50.0

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="ChunkTriggers" type="Node2D" parent="."]

[node name="LeftTrigger" type="Area2D" parent="ChunkTriggers" groups=["chunk_triggers"]]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChunkTriggers/LeftTrigger"]
position = Vector2(100, 540)
rotation = 1.5708
shape = SubResource("RectangleShape2D_xaf8u")

[node name="RightTrigger" type="Area2D" parent="ChunkTriggers" groups=["chunk_triggers"]]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChunkTriggers/RightTrigger"]
position = Vector2(1820, 540)
rotation = 1.5708
shape = SubResource("RectangleShape2D_g0cqg")
